// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getValidatedOptions should throw when accessToken is empty 1`] = `
"Please update your config file: /myHomeDir/.backport/config.json.
It must contain a valid \\"username\\" and \\"accessToken\\".

Read more: https://github.com/sqren/backport/blob/e119d71d6dc03cd061f6ad9b9a8b1cd995f98961/docs/configuration.md#global-config-backportconfigjson"
`;

exports[`getValidatedOptions should throw when accessToken is missing 1`] = `
"Please update your config file: /myHomeDir/.backport/config.json.
It must contain a valid \\"username\\" and \\"accessToken\\".

Read more: https://github.com/sqren/backport/blob/e119d71d6dc03cd061f6ad9b9a8b1cd995f98961/docs/configuration.md#global-config-backportconfigjson"
`;

exports[`getValidatedOptions should throw when both \`targetBranches\` and \`targetBranchChoices\` are missing 1`] = `
"You must specify a target branch

You can specify it via either:
 - Config file (recommended): \\".backportrc.json\\". Read more: https://github.com/sqren/backport/blob/e119d71d6dc03cd061f6ad9b9a8b1cd995f98961/docs/configuration.md#project-config-backportrcjson
 - CLI: \\"--branch 6.1\\""
`;

exports[`getValidatedOptions should throw when upstream is empty 1`] = `
"You must specify a valid Github repository

You can specify it via either:
 - Config file (recommended): \\".backportrc.json\\". Read more: https://github.com/sqren/backport/blob/e119d71d6dc03cd061f6ad9b9a8b1cd995f98961/docs/configuration.md#project-config-backportrcjson
 - CLI: \\"--upstream elastic/kibana\\""
`;

exports[`getValidatedOptions should throw when upstream is missing 1`] = `
"You must specify a valid Github repository

You can specify it via either:
 - Config file (recommended): \\".backportrc.json\\". Read more: https://github.com/sqren/backport/blob/e119d71d6dc03cd061f6ad9b9a8b1cd995f98961/docs/configuration.md#project-config-backportrcjson
 - CLI: \\"--upstream elastic/kibana\\""
`;

exports[`getValidatedOptions should throw when username is empty 1`] = `
"Please update your config file: /myHomeDir/.backport/config.json.
It must contain a valid \\"username\\" and \\"accessToken\\".

Read more: https://github.com/sqren/backport/blob/e119d71d6dc03cd061f6ad9b9a8b1cd995f98961/docs/configuration.md#global-config-backportconfigjson"
`;

exports[`getValidatedOptions should throw when username is missing 1`] = `
"Please update your config file: /myHomeDir/.backport/config.json.
It must contain a valid \\"username\\" and \\"accessToken\\".

Read more: https://github.com/sqren/backport/blob/e119d71d6dc03cd061f6ad9b9a8b1cd995f98961/docs/configuration.md#global-config-backportconfigjson"
`;
